hot fix spacing

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -121,11 +121,8 @@
   color: #ff0000;
   font-size: 12px;
   line-height: 1.2;
-  /* opacity: 0;*/
-  position: absolute;
-  top: calc(100% +5px);
-  left: 0;
-  /*transition: opacity 0.3s; */
+
+  padding-top: 5px;
 }
 .modal__error_visible {
   visibility: visible;
